[package]
name = "dotman"
version = "0.0.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["network"]
jsonnet = ["jsonnet-rs"]
network = ["reqwest"]

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.52"
clap = { version="3.0.0-rc.7", features=["derive"] }
clap_generate = "3.0.0-rc.7"
futures = "0.3.18"
hex = "0.4.3"
hostname = "0.3.1"
jsonnet-rs = { version="0.17.0", optional = true }
kstring = "1.0.6"
libc = "0.2.112"
liquid = "0.23.0"
maplit = "1.0.2"
md5 = "0.7.0"
nom = "7.1.0"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = { version="0.11.7", features=["rustls-tls"], default-features=false, optional=true }
rmp-serde = "0.15.5"
serde = { version="1.0.132", features=["derive"] }
serde_json = "1.0.73"
sha2 = "0.10.0"
termion = "1.5.6"
thiserror = "1.0.30"
tokio = { version="1.15.0", features=["fs", "process", "rt-multi-thread", "macros"] }
tokio-stream = { version="0.1.8", features=["fs"] }
yaml-rust = "0.4.5"
