[package]
name = "dotman"
version = "0.0.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["network"]
jsonnet = ["jsonnet-rs"]
network = ["reqwest"]

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
clap = { version="3.0.10", features=["derive"] }
clap_complete = "3.0.2"
futures = "0.3.19"
hex = "0.4.3"
hostname = "0.3.1"
jsonnet-rs = { version="0.17.0", optional = true }
kstring = "1.0.6"
libc = "0.2.113"
liquid = "0.23.1"
maplit = "1.0.2"
md5 = "0.7.0"
nom = "7.1.0"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = { version="0.11.9", features=["rustls-tls"], default-features=false, optional=true }
rmp-serde = "0.15.5"
serde = { version="1.0.133", features=["derive"] }
serde_json = "1.0.74"
sha2 = "0.10.1"
termion = "1.5.6"
thiserror = "1.0.30"
tokio = { version="1.15.0", features=["fs", "process", "rt-multi-thread", "macros"] }
tokio-stream = { version="0.1.8", features=["fs"] }
yaml-rust = "0.4.5"
