[package]
name = "dotman"
version = "0.0.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["network"]
jsonnet = ["jsonnet-rs"]
network = ["reqwest"]

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
clap = { version="4.0.30", features=["derive"] }
clap_complete = "4.0.7"
futures = "0.3.25"
hex = "0.4.3"
hostname = "0.3.1"
jsonnet-rs = { version="0.17.0", optional = true }
kstring = "2.0.0"
libc = "0.2.139"
liquid = "0.26.0"
maplit = "1.0.2"
md5 = "0.7.0"
nom = "7.1.1"
once_cell = "1.16.0"
regex = "1.7.0"
reqwest = { version="0.11.13", features=["rustls-tls"], default-features=false, optional=true }
rmp-serde = "1.1.1"
serde = { version="1.0.151", features=["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
termion = "2.0.1"
thiserror = "1.0.38"
tokio = { version="1.23.0", features=["fs", "process", "rt-multi-thread", "macros"] }
tokio-stream = { version="0.1.11", features=["fs"] }
yaml-rust = "0.4.5"
